--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-API_KEY="AIzaSyCZnla7f4TBu9Uv3DhVGlUiAcSJ1Wk1yGc"
-AUTH_DOMAIN="social-media-app-8baf4.firebaseapp.com"
-PROJECT_ID="social-media-app-8baf4"
-STORAGE_BUCKET="social-media-app-8baf4.appspot.com"
-MESSAGING_SENDER_ID="206107592160"
-APP_ID="1:206107592160:web:b6908c6a2bc693ee67d785"
+API_KEY="AIzaSyASuIDZJ_CDxuLKTd2Yreevd0ndd_62Y_I"
+AUTH_DOMAIN="reachoutyay.firebaseapp.com"
+PROJECT_ID="reachoutyay"
+STORAGE_BUCKET="reachoutyay.appspot.com"
+MESSAGING_SENDER_ID="344946879186"
+APP_ID="1:344946879186:web:cfd207aa16fb7b6a515b0b"
