--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reach_out_app",
+  "name": "rnfirebase-chat",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -14,18 +14,22 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
     "dotenv": "^16.0.0",
-    "expo": "~44.0.0",
+    "expo": "^44.0.0",
     "expo-constants": "~13.0.1",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-emoji-board": "^1.2.1",
+    "react-native-emoji-selector": "^0.2.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-web": "0.17.1",
+    "resolve-url": "^0.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
